# urchin

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yaml
.github/: CODE_OF_CONDUCT.md  SECURITY.md
src/: config.rs  main.rs
src/domain/: engine.rs  mod.rs  models.rs  ports.rs  services.rs
src/infra/: discord.rs  mod.rs  persistence.rs  stoat.rs  store.rs  telegram.rs
