[package]
name = "urchin"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1" 
tracing = "0.1"     
tracing-subscriber = "0.3"

serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

sled = "0.34"       
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15.7"